WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
116313
Fix code that expects Page::chrome() to return a pointer
https://bugs.webkit.org/show_bug.cgi?id=116313
Summary
Fix code that expects Page::chrome() to return a pointer
Alberto Garcia
Reported
2013-05-17 07:02:14 PDT
After
r150214
, (
bug 116185
) Page::chrome() now returns a reference, but not all code was adapted to handle this. In particular this breaks the GTK+ debug builds.
Attachments
Patch
(4.70 KB, patch)
2013-05-17 07:06 PDT
,
Alberto Garcia
no flags
Details
Formatted Diff
Diff
Patch
(3.55 KB, patch)
2013-05-17 07:50 PDT
,
Alberto Garcia
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alberto Garcia
Comment 1
2013-05-17 07:06:38 PDT
Created
attachment 202080
[details]
Patch
Alberto Garcia
Comment 2
2013-05-17 07:50:47 PDT
Created
attachment 202087
[details]
Patch
Alberto Garcia
Comment 3
2013-05-17 07:51:49 PDT
I noticed that Gustavo fixed the GTK+ part in
r150256
. I've just uploaded an updated patch without that file.
WebKit Commit Bot
Comment 4
2013-05-17 09:06:36 PDT
Comment on
attachment 202087
[details]
Patch Clearing flags on attachment: 202087 Committed
r150263
: <
http://trac.webkit.org/changeset/150263
>
WebKit Commit Bot
Comment 5
2013-05-17 09:06:39 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug